# luxide

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  REFRESH_TOKEN_PLAN.md  cornell_box.json  cornell_box.yaml  cornell_box_inline.json  cornell_box_rotate.yaml  cornell_box_teapot.json  cornell_triangle_test.json  docker-compose.yaml  justfile  luxide.json  luxide.yaml  opencode.json  package-lock.json  schema.json  template.json  todo.md
.github/: pull_request_template.md
.opencode/: brdf-importance-sampling.md
.sqlx/: query-0591dc026ab6b3f1cdf00d85d51370a518903c7924c2488b13728cf38e1d1bc2.json  query-05d032845b2086d89d2995f69fd8a8d0ba555a76a3d0497d598100f517110efc.json  query-06eeb1553689658c8e569c4aa83e7f6891637a641ef1e62b1be7f778cf941edb.json  query-0fe9e816ca53309da7c7fb0fb629a9cb88e18c0c8c165a054c6f65e4fed20a3c.json  query-1295a6052fdcf8e6aac5f10851566fcc5b3eeb888019a9f0e830f42cb4b84f99.json  query-1862334726853b190d4bc1cc31d35cc8115706997134fbb37c23502e8c6c303f.json  query-1b84c5c9bb5e99f00da9865211b6e92b3c0268ba7ee6dfb7ec7a7520095a9f22.json  query-21bb50d23ae1b1f460e338236dff1ea4e170f8f5e8b06e3692a58b2f3ea83079.json  query-2a44f3d4031dc2f79e4f884ee143d490eb140c3324f5204a0e3da41d803b5e2f.json  query-2c124be0b400ec047d1c194d05c3e7e872e2cb10ca74401f1171af2e2131a142.json  query-2f1aa90ce2f1078049aef875a3b9af06cdb7e98d6dca65d7671a48de06ec2fcb.json  query-33190d13b55eeb583e4356ef73db83ae99295933a714b678a972e6eef6dc5d36.json  query-33c0bf4c5c2c917814e64270ecdfe6e9e52f74ea8285eafc8e5c2c4f4fc65e3f.json  query-353f9770b60bdc94ee078955478a3c067308b239efd5147085f73e524cbba189.json  query-35d7533acb03bb65fd810298036d7d63343da187057be78234db47f1c567ba53.json  query-36f94e068734eed0e476f4b01ea249b664aa9b84d444b9a1f1627c8950edf96f.json  query-3fdc0dc3c5c1d957be2c1b239e537366e6db26058ef60a294d93a81c5511ce1c.json  query-456c6b3ceec7a09548f7af69c90e7d71d987fae6ddd747d6129a0caf2c86bec4.json  query-4c2b1155eaaed0d5d14ab3f842d87db7bba438044864398591ec46492ecb68ca.json  query-4ceabd59f9ba5daa489fc61c23b8cd63f769184e6df5ec023475de55ceaf706e.json  query-4f16bc91f869bc81a6e0010b7fb653bf4a6bc99198e0254b420e48747074aa2c.json  query-5646216d84069aaab4ffdd9a7d41342af041eccb00a669837575a92e71b85ef3.json  query-61c21ce9245f65113b98a9bebc5185101d9063ca5646a0ab54df9f2f49997e52.json  query-65743a99f00d0e6ca3a010962f292265751f29c265ecba373e295149aa55d322.json  query-6d974d175ed78fde4e0baa973f024d8f5bf207b3b88928e04a2a3bee4ec7f722.json  query-6e4d9ad21c73ceca2f5383ac0ec9dbbc8c0da404d37fbf12d4e6bf491b335e6f.json  query-722574a89d61fa44ee5f412b2e571edc99f9b96702829a1ba570937a226d8e1a.json  query-746c5d30a253b4bfc59fb6b90a9683bed29d8b36b2dfad0a631e2a1fa435bbe8.json  query-746c6d411fd0d3e7d9cd1e29a4f6038e5dd0cb7eee0e87c746259416a3771a53.json  query-754b11fddda23569561ae83e9d8cdc44e83984d6f7eaaec4430292aea1b3744a.json  query-7653e00b271e8e79aaf5bef611efe3e6bc01ab584446ef742cdb27d03f826599.json  query-7ef521daace4616f64182a26196fb3af521dae38b763e4ef962d841b970b58c0.json  query-7f8fca59eda4f03d00027eda47e7be59cd4efe186171f1ab06bdda38e4638273.json  query-87c4c7d92d60f0dfa87cff3e7da2f5954c34a43c6b14e708de73c55a6377ab0c.json  query-972c3ddb7134742109677baf4b8e1c87ccd8ca6d85bb4bf8088bcde794cb1060.json  (+40 more)
benches/: aabb.rs  parallelogram.rs  sphere.rs
bruno/: bruno.json  (+15 more)
(+703 files in other folders)
