[package]
name = "luxide"
version = "0.1.0"
edition = "2021"
description = "A path tracer"
license = "MIT"
repository = "https://github.com/paulwrubel/luxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev-fast]
inherits = "dev"
opt-level = 1

[dependencies]
time = { version = "0.3.30", features = ["formatting", "local-offset", "macros", "parsing"] }
auto_ops = "0.3.0"
image = "0.24.7"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.8.0"
