[[bin]]
name = "luxide-api"
path = "src/bin/api.rs"

[[bin]]
name = "luxide-cli"
path = "src/bin/cli.rs"

[package]
name = "luxide"
version = "0.1.0"
edition = "2024"
description = "A path tracer"
license = "MIT"
repository = "https://github.com/paulwrubel/luxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev-fast]
inherits = "dev"
opt-level = 1

[dependencies]
auto_ops = "0.3.0"
image = "0.24.7"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.8.0"
criterion = "0.5.1"
dyn-clone = "1.0.16"
serde = { version = "1.0.193", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
serde_json = "1.0.108"
tobj = "4.0.0"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
base64 = "0.22.1"
axum-extra = { version = "0.10.0", features = ["cookie-signed", "typed-header"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
async-trait = "0.1.88"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"] }
bincode = { version = "2.0.1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = "0.12.15"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
dashmap = "6.1.0"
jsonwebtoken = "9.3.1"
include_dir = "0.7.4"

[[bench]]
name = "aabb"
harness = false

[[bench]]
name = "parallelogram"
harness = false

[[bench]]
name = "sphere"
harness = false
